picture block diagram with internal states added

--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -275,7 +275,13 @@ Therefore, the direct form takes the following different forms (See also \ref{ge
 
 
 \subsection{Sample Processing Methods\buchSeite{146}}
-  \includegraphics[width=5cm]{./picture/basic_blocks}
+  \begin{multicols}{2}
+    \includegraphics[width=5cm]{./picture/basic_blocks}
+    
+  \columnbreak
+  
+    \includegraphics[width=5cm]{./picture/bd_internal_states}
+  \end{multicols}
 \subsubsection{Pure Delays\buchSeite{147-151}}
 \subsubsection{FIR Filtering in Direct Form\buchSeite{152-156}}
 \subsubsection{Hardware realizations and circular buffers \buchSeite{162}}
