--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -77,7 +77,7 @@ aliased with $f - f_{sampling}$.\\
 \textbf{Example:} $sin(8\pi t)$ (signal frequency $f=4$) sampled at a rate of
 $f_s=5Hz$ will be aliased to $sin(2\pi (f-f_s) t) = sin(2\pi (-1) t)$
 \[ f_{ia} = f_i + nf_s \]
-n has to be choosed, that $f_{ia}$ is in the Nyquist intervall. n can also be negative.\\
+n must be selected such that $f_{ia}$ is in the Nyquist intervall. n can also be negative.\\
 
 
 Is the signal frequency $f$ inside the Nyquist interval $\left[-f_s/2,+f_s/2\right]$, no aliasing will be
