--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -3,6 +3,7 @@
 % Standard Header für Zusammenfassungen verwenden.
 \input{header/zusammenfassung}
 \input{header/hyperref}
+\usepackage{etex}
 \usepackage{tikz}
 % Musste fuer idiotenseite hinzugefuegt werden
 \usepackage{circuitikz}
