--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -98,7 +98,8 @@ For real valued discrete time sequences:\\
 	$|X(\omega)| = |X(\omega)|$\\
 	$argX(\omega) = -argX(-\omega)$\\
 
-Some DTFT-Transforms: \\ \\
+\textbf{Some DTFT-Transforms:}\\ \\
+
 \begin{tabularx}{0.7\textwidth}{|l|X|}
 	\hline
 	$\delta[n]$ &	$X_{2\pi}(\omega) = 1$ \\
@@ -120,12 +121,12 @@ Some DTFT-Transforms: \\ \\
 	\hline
 \end{tabularx} \\ \\
 
-\newpage
 
-Some Z-Transforms:\\
+\textbf{Some Z-Transforms:}\\ \\
+
 \begin{tabular}{|l|l|l|}
 	\hline
-	\textbf{x(n} ) & \textbf{X(z}) & \textbf{ROC} \\
+	\textbf{x(n)} & \textbf{X(z)} & \textbf{ROC} \\
 	\hline
 	$u(n)$ & $\frac{1}{1 - z^{-1}}$ & $|z|>1$ \\
 	\hline
