expanded direct, canonical and transposed form and put it into longtable, to get rid of multicols because it fucked up page breaks.

--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -3,6 +3,7 @@
 % Standard Header für Zusammenfassungen verwenden.
 \input{header/zusammenfassung}
 \input{header/hyperref}
+\usepackage{longtable}
 \usepackage{etex}
 \usepackage{tikz}
 % Musste fuer idiotenseite hinzugefuegt werden
@@ -10,6 +11,7 @@
 \usepackage{multicol}
 \usepackage{rotating}
 \usepackage{arydshln}
+
 \newcommand{\arraystretchOriginal}{1}
 
 \setDefaultArrayStretch{2}
