corrected minor mistake

--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -90,7 +90,7 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $ \qquad (I/O difference equation)
   Input sinus: &
   $x(n) = e^{j \omega_0 n} \cdot u(n)$ &
   $\Rightarrow$ &
-  $X(Z) = \frac{1}{1-e^{j \omega_0} z^{-1}}$ \qquad
+  $X(z) = \frac{1}{1-e^{j \omega_0} z^{-1}}$ \qquad
   ROC $|z| > |e^{j\omega_0}|=1$ \\
   
   time till the output is stable: &
