better design for “idiotenseite” kicked euler fcn out of it because it is already stated in section “z-Transform”

--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -170,11 +170,13 @@ for $A_0 \rightarrow z=0$\\ \\
 \textbf{Euler:}
 
 \begin{align}
-\cos(\alpha) = \frac{e^{j\alpha} + e^{-j\alpha}}{2}
-&& \sin(\alpha) = \frac{e^{j\alpha} - e^{-j\alpha}}{2j} && 
-    {e}^{\pm jn\omega} = \cos{n\omega} \pm j \sin{n\omega} \notag\\
-e^{j\frac{\pi}{2}n} = j^n & & e^{-j\frac{\pi}{2}n} = (-j)^n &&
-e^{jn\pi}=e^{-jn\pi}=(-1)^n \notag
+\cos(\alpha) &= \frac{e^{j\alpha} + e^{-j\alpha}}{2}
+		&& \sin(\alpha) &= \frac{e^{j\alpha} - e^{-j\alpha}}{2j} 
+		&& {e}^{\pm jn\omega} &= \cos{n\omega} \pm j \sin{n\omega} \notag\\
+e^{j\frac{\pi}{2}n} &= j^n 
+		&& e^{-j\frac{\pi}{2}n} &= (-j)^n 
+		&& e^{jn\pi}&=e^{jn\pi}=(-1)^n \notag \\
+\sqrt[n]{1} &= e^{j\cdot 2\pi \frac{k}{n}} \quad k \in [1,n] && && \notag
 \end{align}
 $(1-ae^{j\omega}z^{-1})(1-ae^{-j\omega}z^{-1}) = 1 - 2a\cos(\omega)z^{-1}+a^2z^{-2}$
 
