--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -46,13 +46,29 @@
 \section{Idiotenseite}
 \input{idiotenseite/trigo/subsections/Winkelargumente}
 \input{idiotenseite/trigo/subsections/Periodizitaet}
-\input{idiotenseite/trigo/subsections/Quadrantenbeziehungen}
-\input{idiotenseite/trigo/subsections/Additionstheoreme}
-\input{idiotenseite/trigo/subsections/DoppelHalbwinkel}
-\input{idiotenseite/trigo/subsections/Produkte}
-\newpage
-\input{idiotenseite/trigo/subsections/SummeDifferenzen}
-\input{idiotenseite/trigo/subsections/Euler}
+
+\vspace{0.5cm}
+
+\begin{minipage}[t]{0.49\textwidth}
+	\input{idiotenseite/trigo/subsections/Additionstheoreme}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.49\textwidth}
+	\input{idiotenseite/trigo/subsections/DoppelHalbwinkel}
+\end{minipage}
+
+\vspace{0.5cm}
+
+\begin{minipage}[t]{0.49\textwidth}
+	\input{idiotenseite/trigo/subsections/SummeDifferenzen}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.49\textwidth}
+	\input{idiotenseite/trigo/subsections/Produkte}
+\end{minipage}
+
+\vspace{0.5cm}
+
 \input{idiotenseite/diverses/subsections/Reihenentwicklung}
 
 \end{document}
