corrected mistake from Issue #5

--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -44,7 +44,7 @@
 	\\ \hline
   power &
   $\sigma_x^2 = R_{XX}(0) = E(x(n)^2) = \int\limits_{-\pi}^\pi S_{XX}(\omega)\dfrac{d\omega}{2\pi}$ \newline
-  $\sigma_y^2 = \int\limits_{-\pi}^\pi = S_{YY}(\omega)\dfrac{d\omega}{2\pi} = 
+  $\sigma_y^2 = \int\limits_{-\pi}^\pi S_{YY}(\omega)\dfrac{d\omega}{2\pi} = 
   \sigma_x^2 \cdot \int\limits_{-\pi}^\pi |H(\omega)|^2 \dfrac{d\omega}{2\pi}$
 	\\ \hline
 	power spectrum & 
