corrected the same mistake again at mean/expected value…

--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -7,7 +7,7 @@
 	\hline
 	mean / expected value & $E(x) = \sum\limits_k \alpha_k P(x = \alpha_k) =
 	\int\limits_{-\infty}^{\infty}\alpha\cdot f_x(\alpha)d\alpha$ \newline
-	$E(y) = E(g(x)) = \int\limits_{-\infty}^{\infty} = g(\alpha)f_x(\alpha)d\alpha $
+	$E(y) = E(g(x)) = \int\limits_{-\infty}^{\infty} g(\alpha)f_x(\alpha)d\alpha $
 	\\
 	\hline
 	signal power & $E( x^2 ) = \sum\limits_k \alpha_k^2 P(x = \alpha_k) =
