Readded Successive Approximation algorithm. First of all the pages are unlimited and second of all it’s more general and you only need these two forms instead of all the different ones in the book with all the text to go with it. Thanks for leaving it this time. If you don’t want it in your copy then please comment it in your working copy, other people are happy that it’s in there.

--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -28,6 +28,8 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 	\\ \hline
 \end{tabularx}
 
+\newpage
+
 \begin{multicols}{2}
 \subsection{Causality\buchSeite{112}}
 \begin{tabular}{lp{4.5cm}}
