--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -15,6 +15,8 @@
 	\\ \hline
 \end{tabular}
 
+\newpage
+
 \begin{multicols}{2}
 \subsubsection{Direct Form\buchSeite{123}}
 \begin{tabular}{|l|l|}
@@ -190,7 +192,7 @@ Example:
 \begin{enumerate}
   \item Divide input $x$ into smaller blocks $x_0, x_1, \ldots$ of length $L$.
   If the input is not long enough for a last complete block, the last block is
-  filled up with zeroes
+  filled up with zeros
   \item Calculate the output of the convolution of block $x_0$ with $h$,
   resulting in $y_0$
   \item Repeat step 2 for all blocks, resulting in $y_1, y_2, \ldots$
