--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -123,7 +123,7 @@ $f_0$: reference frequency (typ. DC)
       1 & 0\leq t \leq T \\
       0 & else
     \end{matrix}\right.$ &
-    $H(f) = \dfrac{1}{2\pi j f}(1-e^{-2\pi f T}) = T \cdot \dfrac{\sin(\pi f T}{\pi f T}\cdot e^{-\pi j f T}$
+    $H(f) = \dfrac{1}{2\pi j f}(1-e^{-2\pi f T}) = T \cdot \dfrac{\sin(\pi f T)}{\pi f T}\cdot e^{-\pi j f T}$
   \end{tabular}
   
   The spectral images at higher frequencies are not well suppressed, therefore an \textbf{anti-image postfilter} is needed.\\
