--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -87,13 +87,13 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $ \qquad (I/O difference equation)
 
 \subsection{Transient Response\buchSeite{232}}
 \begin{tabular}{llll}
-  Input sinus: &
+  Input sine: &
   $x(n) = e^{j \omega_0 n} \cdot u(n)$ &
   $\Rightarrow$ &
   $X(z) = \frac{1}{1-e^{j \omega_0} z^{-1}}$ \qquad
   ROC $|z| > |e^{j\omega_0}|=1$ \\
   
-  time till the output is stable: &
+  time until the output is stable: &
   $n_{eff} = \frac{\ln \epsilon}{\ln \rho} \quad [\text{sample}]$ &
   &
   typ. $\epsilon = 1\%$ \\
