--- a/sections/FIRFilteringConvolution.tex
+++ b/sections/FIRFilteringConvolution.tex
@@ -15,8 +15,6 @@
 	\\ \hline
 \end{tabular}
 
-\newpage
-
 \begin{multicols}{2}
 \subsubsection{Direct Form\buchSeite{123}}
 \begin{tabular}{|l|l|}
@@ -235,7 +233,7 @@ example: with $L=3$ and $M=3$
 
 \columnbreak
 
-  \includegraphics[width=10cm]{./picture/transient_steady_state}
+  \includegraphics[width=8cm]{./picture/transient_steady_state}
 \end{multicols}
 
 Therefore, the direct form takes the following different forms depending
@@ -277,13 +275,15 @@ Therefore, the direct form takes the following different forms (See also \ref{ge
 
 
 \subsection{Sample Processing Methods\buchSeite{146}}
-  \begin{multicols}{2}
+  \begin{multicols}{3}
     \includegraphics[width=5cm]{./picture/basic_blocks}
     
   \columnbreak
   
     \includegraphics[width=5cm]{./picture/bd_internal_states}
-  \end{multicols}
+ 
+ \columnbreak
 \subsubsection{Pure Delays\buchSeite{147-151}}
 \subsubsection{FIR Filtering in Direct Form\buchSeite{152-156}}
 \subsubsection{Hardware realizations and circular buffers \buchSeite{162}}
+ \end{multicols}
