--- a/sections/TransferFunctions.tex
+++ b/sections/TransferFunctions.tex
@@ -58,9 +58,9 @@ Example: $y(n) = 0.25 \cdot y(n-2) + x(n) $ \qquad (I/O difference equation)
 	  	   \textbf{transposed form \buchSeite{222}}\newline
 	  	   \includegraphics[width=\linewidth]{./picture/transposed_form}\newline
 	  	   
-	  	   $W(z) = 2\cdot X(z) + 0.8\cdot Y(z)$\newline
-	  	   $W_1(z) = z^-1 W(z)$\newline
-	  	   $Y(z) = 5\cdot X(z) + Y(z)$\newline
+%	  	   $W(z) = 2\cdot X(z) + 0.8\cdot Y(z)$\newline
+%	  	   $W_1(z) = z^-1 W(z)$\newline
+%	  	   $Y(z) = 5\cdot X(z) + Y(z)$\newline??
 	  	   
 	  	   \textbf{Transposition rules:} \newline
 	  	   replace adders by nodes, \newline
@@ -191,7 +191,8 @@ circle.
 	& $H(z) = \frac{N(r^{-1}z)}{N(\rho^{-1}z)} 
 	= \frac{1+rb_1z^{-1}+\ldots+r^Mb_Mz^{-M}}{1-\rho b_1z^{-1}+\ldots+\rho^Mb_Mz^{-M}}$ \qquad with $|r| < |\rho| < 1$ 
 	\end{tabular}
-	
+
+\newpage	
 \subsection{Deconvolution, Inverse Filters and Stability \buchSeite{254-259}}
 \begin{multicols}{2}
 	\begin{tabular}{ll}
