--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -73,7 +73,7 @@ strictly \textbf{outside} the unit circle.
 
 \textbf{Marginally stable} signals have poles, that fall exactly onto the unit circle!
 
-
+\newpage
 \subsection{Frequency Spectrum\buchSeite{196-210}}
 \begin{multicols}{2}
 	\begin{align}
@@ -95,7 +95,7 @@ Another useful relationship is Parseval’s equation, which relates the total en
 
 For real valued discrete time sequences:\\
 	$X(\omega)^* = X(-\omega)$ \\
-	$|X(\omega)| = |X(\omega)|$\\
+	$|X(\omega)| = |X(-\omega)|$\\
 	$argX(\omega) = -argX(-\omega)$\\
 
 \textbf{Some DTFT-Transforms:}\\ \\
@@ -179,6 +179,8 @@ e^{j\frac{\pi}{2}n} &= j^n
 		&& e^{jn\pi}&=e^{jn\pi}=(-1)^n \notag \\
 \sqrt[n]{1} &= e^{j\cdot 2\pi \frac{k}{n}} \quad k \in [1,n] && && \notag
 \end{align}
+
+\textbf{Compley valued poles:}
 $(1-ae^{j\omega}z^{-1})(1-ae^{-j\omega}z^{-1}) = 1 - 2a\cos(\omega)z^{-1}+a^2z^{-2}$
 
 
