--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -1,11 +1,11 @@
 \section{Sampling and Reconstruction\buch{Chapter 1}}
 \subsection{Analog Signals\buchSeite{2}}
-\begin{tabular}{llp{3cm}ll}
-  $\Omega = 2\pi f$ & $[\Omega] = \frac{rad}{s}$ & &
-  $\omega = \Omega T = \frac{2\pi f}{f_s}$ & $[\omega] = \frac{rad}{sample}$
-\end{tabular}
 
-\begin{tabularx}{\linewidth}{|l|X|}
+\begin{tabularx}{0.5\linewidth}{l l X}
+  $\Omega = 2\pi f$ & $[\Omega] = \frac{rad}{s}$\\
+  $\omega = \Omega T = \frac{2\pi f}{f_s}$ & $[\omega] = \frac{rad}{sample}$
+\end{tabularx}
+\begin{tabularx}{0.5\linewidth}{|l|X|}
 	\hline
 	Fourier transform & $X(\Omega) = \int\limits_{-\infty}^{\infty} x(t)e^{-j\Omega t}dt$ \\
 	\hline
@@ -72,7 +72,7 @@ The spectrum of the filter looks like this
 
 \subsubsection{Aliasing\buchSeite{10, 38}}
 If the signal frequency $f$ is outside the Nyquist interval, the signal will be
-aliased with $f - f_{sampling}$.\\
+aliased with $f \pm n \cdot f_{sampling}$.\\
 
 \textbf{Example:} $sin(8\pi t)$ (signal frequency $f=4$) sampled at a rate of
 $f_s=5Hz$ will be aliased to $sin(2\pi (f-f_s) t) = sin(2\pi (-1) t)$
@@ -118,16 +118,19 @@ $f_0$: reference frequency (typ. DC)
   
 
 \subsubsection{Staircase reconstructor \buchSeite{45}}
-  \begin{tabular}{p{8cm}p{8cm}}
+  \begin{tabular}{p{8cm}}
     $h(t) = u(t) - u(t-T) = \left\lbrace \begin{matrix}
       1 & 0\leq t \leq T \\
       0 & else
-    \end{matrix}\right.$ &
+    \end{matrix}\right.$ \\
     $H(f) = \dfrac{1}{2\pi j f}(1-e^{-2\pi f T}) = T \cdot \dfrac{\sin(\pi f T)}{\pi f T}\cdot e^{-\pi j f T}$
   \end{tabular}
+  \begin{minipage}{10cm}
+	    \includegraphics[width=10cm]{./picture/compOfDSPSystem}
+  \end{minipage}
   
   The spectral images at higher frequencies are not well suppressed, therefore an \textbf{anti-image postfilter} is needed.\\
-  \includegraphics[width=16cm]{./picture/compOfDSPSystem}
+
   
 
   
