--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -56,7 +56,7 @@
 
 \vspace{0.2cm}
 \begin{minipage}{0.3\textwidth}
-  Oversampled quantization noise power, \textbf{whitout noise shaping.}
+  Oversampled quantization noise power, \textbf{without noise shaping.}
   
   \includegraphics[width=\textwidth]{./picture/no_noise_shaping}
 \end{minipage}
