--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -180,7 +180,7 @@ e^{j\frac{\pi}{2}n} &= j^n
 \sqrt[n]{1} &= e^{j\cdot 2\pi \frac{k}{n}} \quad k \in [1,n] && && \notag
 \end{align}
 
-\textbf{Compley valued poles:}
+\textbf{Complex valued poles:}
 $(1-ae^{j\omega}z^{-1})(1-ae^{-j\omega}z^{-1}) = 1 - 2a\cos(\omega)z^{-1}+a^2z^{-2}$
 
 
